--- a/build.gradle
+++ b/build.gradle
@@ -23,7 +23,7 @@ plugins {
     id 'com.github.johnrengelman.shadow' version '2.0.0'
 }
 
-version = '1.2.0'
+version = '1.6.0'
 project.ext.NIFI_VERSION='1.6.0'
 description = "A project to create a stub/mock environment for testing ExecuteScript processors"
 group = 'mattyb149'
@@ -45,8 +45,9 @@ dependencies {
     runtime 'org.slf4j:slf4j-log4j12:1.7.14'
 
     // script engine(s)
-    runtime 'org.codehaus.groovy:groovy-all:2.4.6'
-    runtime 'org.python:jython-standalone:2.7.0'
+    runtime 'org.codehaus.groovy:groovy-all:2.4.15'
+    runtime 'org.python:jython-standalone:2.7.1'
+    runtime 'org.jruby:jruby-complete:9.1.17.0'
 }
 
 mainClassName = 'nifi.ScriptRunner'
