--- a/build.gradle
+++ b/build.gradle
@@ -23,8 +23,8 @@ plugins {
     id 'com.github.johnrengelman.shadow' version '2.0.0'
 }
 
-version = '1.6.0'
-project.ext.NIFI_VERSION='1.6.0'
+version = '1.8.0'
+project.ext.NIFI_VERSION='1.8.0'
 description = "A project to create a stub/mock environment for testing ExecuteScript processors"
 group = 'mattyb149'
 status = 'RELEASE'
@@ -116,6 +116,6 @@ bintray {
     }
 }
 
-task wrapper(type: Wrapper) {
+/*task wrapper(type: Wrapper) {
     gradleVersion = "4.2.1"
-}
+}*/
